--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,8 +2,14 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: 'Noto Sans Thai', sans-serif;
+  font-size: 16px;
+  background-color: #080d3f;
+  color: hsla(0,0%,100%,.6);
+}
+
+.app > .container {
+  min-height: calc(100vh - 144px);
 }
 
 a {
@@ -15,12 +21,148 @@ a {
   box-sizing: border-box;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-  body {
-    color: white;
-    background: black;
-  }
+form {
+  max-width: 300px;
+  margin: 0 auto;
+}
+
+footer {
+  background-color: #0a1253;
+}
+
+.bg-dark {
+  background-color: #080d3f!important;
+}
+
+.modal-header {
+  border-bottom: none;
+}
+
+.modal-content {
+  background-color: #1f2251;
+}
+
+.modal-content .close {
+  color: hsla(0,0%,100%,.6);
+  text-shadow: none;
+}
+
+.card-flip {
+  width: 300px;
+  height: 350px;
+  margin: 0 auto;
+  display: flex;
+  align-items: center;
+  border-radius: 10%;
+  padding: 1rem;
+  background: white;
+  color: black;
+}
+
+.row-btn .btn-sm {
+  font-size: 0.8rem;
+  padding: 0.25rem;
+}
+
+.table-responsive {
+  background-color: white;
+  border-radius: 20px;
+}
+
+.btn-danger {
+  background: #fd5d93;
+  background-image: linear-gradient(to bottom left,#fd5d93,#ec250d,#fd5d93);
+  background-size: 210% 210%;
+  background-position: 100% 0;
+  background-color: #fd5d93;
+  transition: all .15s ease;
+  box-shadow: none;
+  color: #fff;
+}
+
+.btn-warning {
+  background: #ff8d72;
+  background-image: linear-gradient(to bottom left,#ff8d72,#ff6491,#ff8d72);
+  background-size: 210% 210%;
+  background-position: 100% 0;
+  background-color: #ff8d72;
+  transition: all .15s ease;
+  box-shadow: none;
+  color: #fff;
+}
+
+.btn-success {
+  background: #00f2c3;
+  background-image: linear-gradient(to bottom left,#00f2c3,#0098f0,#00f2c3);
+  background-size: 210% 210%;
+  background-position: 100% 0;
+  background-color: #00f2c3;
+  transition: all .15s ease;
+  box-shadow: none;
+  color: #fff;
+}
+
+.btn-info {
+  background: #1d8cf8;
+  background-image: linear-gradient(to bottom left,#1d8cf8,#3358f4,#1d8cf8);
+  background-size: 210% 210%;
+  background-position: 100% 0;
+  background-color: #1d8cf8;
+  transition: all .15s ease;
+  box-shadow: none;
+  color: #fff;
+}
+
+.btn-primary {
+  background: #e14eca;
+  background-image: linear-gradient(to bottom left,#e14eca,#ba54f5,#e14eca);
+  background-size: 210% 210%;
+  background-position: 100% 0;
+  background-color: #e14eca;
+  transition: all .15s ease;
+  box-shadow: none;
+  color: #fff;
+}
+
+.btn-neutral {
+  background: #fff;
+  background-image: linear-gradient(to bottom left,#fff,#fff,#fff);
+  background-size: 210% 210%;
+  background-position: 100% 0;
+  background-color: #fff;
+  transition: all .15s ease;
+  box-shadow: none;
+  color: #e14eca;
+}
+
+.form-control {
+  display: block;
+  width: 100%;
+  height: calc(2.25rem + 2px);
+  padding: .5rem .7rem;
+  font-size: .875rem;
+  font-weight: 400;
+  line-height: 1.42857;
+  color: hsla(0,0%,100%,.8);
+  background-color: transparent;
+  background-clip: padding-box;
+  border: 1px solid #cad1d7;
+  border-radius: .25rem;
+  box-shadow: none;
+  transition: all .2s cubic-bezier(.68,-.55,.265,1.55);
+}
+
+.form-control {
+  border-color: #2b3553;
+  border-radius: .4285rem;
+  font-size: .75rem;
+  transition: color .3s ease-in-out,border-color .3s ease-in-out,background-color .3s ease-in-out;
+}
+
+.form-control:focus {
+  border-color: #1d8cf8;
+  background-color: transparent;
+  box-shadow: none;
+  color: hsla(0,0%,100%,.8);
+  outline: 0;
 }
