--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,15 +1,19 @@
-html,
-body {
+html, body {
   padding: 0;
   margin: 0;
-  font-family: 'Noto Sans Thai', sans-serif;
   font-size: 16px;
-  background-color: #080d3f;
-  color: hsla(0,0%,100%,.6);
+}
+
+html, body, a, p, ul, ol, li, div {
+  font-family: 'Noto Sans Thai', sans-serif;
+}
+
+input, textarea {
+  font-family: 'Noto Sans Thai', sans-serif !important;
 }
 
 .app > .container {
-  min-height: calc(100vh - 144px);
+  min-height: calc(100vh - 163px);
 }
 
 a {
@@ -22,147 +26,39 @@ a {
 }
 
 form {
-  max-width: 300px;
+  max-width: 350px;
   margin: 0 auto;
 }
 
-footer {
-  background-color: #0a1253;
+.navbar {
+  background-color: #f5f7fe;
+  box-shadow: 0 2px 4px #e2e6fc;
+  height: 75px;
 }
 
-.bg-dark {
-  background-color: #080d3f!important;
+.modal-header .close {
+  display: block !important;
+  padding-top: 0;
+  padding-bottom: 0;
 }
 
-.modal-header {
-  border-bottom: none;
-}
-
-.modal-content {
-  background-color: rgba(10, 18, 83, 0.98);
-}
-
-.modal-content .close {
-  color: hsla(0,0%,100%,.6);
-  text-shadow: none;
-}
-
-.card-flip {
-  width: 300px;
-  height: 350px;
+.react-card-flipper .card {
+  height: 330px;
+  width: 330px;
   margin: 0 auto;
-  display: flex;
-  align-items: center;
-  border-radius: 10%;
-  padding: 1rem;
-  background: white;
-  color: black;
 }
 
-.row-btn .btn-sm {
-  font-size: 0.8rem;
-  padding: 0.25rem;
+.react-card-front .card{
+  cursor: pointer;
 }
 
-.table-responsive {
-  background-color: white;
-  border-radius: 20px;
+.row-btn .btn {
+  line-height: 1.25rem;
+  padding: 0.5rem;
 }
 
-.btn-danger {
-  background: #fd5d93;
-  background-image: linear-gradient(to bottom left,#fd5d93,#ec250d,#fd5d93);
-  background-size: 210% 210%;
-  background-position: 100% 0;
-  background-color: #fd5d93;
-  transition: all .15s ease;
-  box-shadow: none;
-  color: #fff;
-}
-
-.btn-warning {
-  background: #ff8d72;
-  background-image: linear-gradient(to bottom left,#ff8d72,#ff6491,#ff8d72);
-  background-size: 210% 210%;
-  background-position: 100% 0;
-  background-color: #ff8d72;
-  transition: all .15s ease;
-  box-shadow: none;
-  color: #fff;
-}
-
-.btn-success {
-  background: #00f2c3;
-  background-image: linear-gradient(to bottom left,#00f2c3,#0098f0,#00f2c3);
-  background-size: 210% 210%;
-  background-position: 100% 0;
-  background-color: #00f2c3;
-  transition: all .15s ease;
-  box-shadow: none;
-  color: #fff;
-}
-
-.btn-info {
-  background: #1d8cf8;
-  background-image: linear-gradient(to bottom left,#1d8cf8,#3358f4,#1d8cf8);
-  background-size: 210% 210%;
-  background-position: 100% 0;
-  background-color: #1d8cf8;
-  transition: all .15s ease;
-  box-shadow: none;
-  color: #fff;
-}
-
-.btn-primary {
-  background: #e14eca;
-  background-image: linear-gradient(to bottom left,#e14eca,#ba54f5,#e14eca);
-  background-size: 210% 210%;
-  background-position: 100% 0;
-  background-color: #e14eca;
-  transition: all .15s ease;
-  box-shadow: none;
-  color: #fff;
-}
-
-.btn-neutral {
-  background: #fff;
-  background-image: linear-gradient(to bottom left,#fff,#fff,#fff);
-  background-size: 210% 210%;
-  background-position: 100% 0;
-  background-color: #fff;
-  transition: all .15s ease;
-  box-shadow: none;
-  color: #e14eca;
-}
-
-.form-control {
-  display: block;
-  width: 100%;
-  height: calc(2.25rem + 2px);
-  padding: .5rem .7rem;
-  font-size: .875rem;
-  font-weight: 400;
-  line-height: 1.42857;
-  color: hsla(0,0%,100%,.8);
-  background-color: transparent;
-  background-clip: padding-box;
-  border: 1px solid #cad1d7;
-  border-radius: .25rem;
-  box-shadow: none;
-  transition: all .2s cubic-bezier(.68,-.55,.265,1.55);
-}
-
-.form-control {
-  border-color: #2b3553;
-  border-radius: .4285rem;
-  font-size: .75rem;
-  transition: color .3s ease-in-out,border-color .3s ease-in-out,background-color .3s ease-in-out;
-}
-
-.form-control:focus {
-  border-color: #1d8cf8;
-  background-color: transparent;
-  box-shadow: none;
-  color: hsla(0,0%,100%,.8);
-  outline: 0;
+.row-btn [class*="btn-outline-"]:hover,
+.row-btn [class*="btn-outline-"]:focus,
+.row-btn [class*="btn-outline-"]:active {
+  padding: 0.5rem;
 }
