--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,14 +7,6 @@ html, body {
   font-size: 16px;
 }
 
-html, body, a, p, ul, ol, li, div {
-  font-family: 'Noto Sans Thai', sans-serif;
-}
-
-input, textarea {
-  font-family: 'Noto Sans Thai', sans-serif !important;
-}
-
 .app > .container {
   min-height: calc(100vh - 163px);
 }
@@ -64,4 +56,42 @@ form {
 .row-btn [class*="btn-outline-"]:focus,
 .row-btn [class*="btn-outline-"]:active {
   padding: 0.5rem;
+}
+
+.table td, .table th {
+  vertical-align: middle;
+}
+
+@media only screen and (min-width: 768px) {
+  .navbar-expand-md.custom-menu.menu-pills .nav-link {
+    padding: 12px 34px;
+    margin: 0 5px;
+    border-radius: 50px;
+  }
+}
+
+@media only screen and (max-width: 767px) {
+  .navbar-expand-md > .container {
+    padding-right: 15px;
+    padding-left: 15px;
+  }
+
+  .navbar-expand-md .navbar-collapse {
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 99999;
+    width: 270px;
+    height: 100% !important;
+    max-height: 100% !important;
+    background: #fff;
+    text-align: center;
+    padding: 100px 30px 0;
+    margin-top: 0;
+    box-shadow: 0 3px 12px rgba(0, 0, 0, 0.02), 0 3px 12px rgba(0, 0, 0, 0.04);
+    animation-name: slideInRight;
+    animation-duration: 1s;
+    animation-fill-mode: both;
+  }
 }
