--- a/styles/globals.css
+++ b/styles/globals.css
@@ -62,6 +62,16 @@ form {
   vertical-align: middle;
 }
 
+body .btn-xs.btn-icon,
+body .btn-xs.btn-icon:hover {
+  font-size: 15px !important;
+  line-height: 15px;
+}
+
+.btn-xs.btn-icon span, .btn-xs.btn-icon i {
+  line-height: 15px;
+}
+
 @media only screen and (min-width: 768px) {
   .navbar-expand-md.custom-menu.menu-pills .nav-link {
     padding: 12px 34px;
