--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,7 +8,7 @@ html, body {
 }
 
 .app > .container {
-  min-height: calc(100vh - 163px);
+  min-height: calc(100vh - 153px);
 }
 
 a {
@@ -74,6 +74,10 @@ body .btn-xs.btn-icon:hover {
 
 .navbar-brand {
   max-height: 25px;
+}
+
+footer {
+  font-size: 0.6rem;
 }
 
 @media only screen and (min-width: 768px) {
