--- a/styles/globals.css
+++ b/styles/globals.css
@@ -41,6 +41,7 @@ form {
   height: 330px;
   width: 330px;
   margin: 0 auto;
+  background-image: url('/bg-card.png');
 }
 
 .react-card-front .card{
@@ -78,6 +79,16 @@ body .btn-xs.btn-icon:hover {
 
 footer {
   font-size: 0.6rem;
+}
+
+.text-howto {
+  height: 200px;
+  background-image: url('/state-howto.png');
+  background-repeat: no-repeat;
+  padding-left: 130px;
+  max-width: 440px;
+  margin-right: auto;
+  margin-left: auto;
 }
 
 @media only screen and (min-width: 768px) {
