--- a/styles/globals.css
+++ b/styles/globals.css
@@ -73,8 +73,14 @@ body .btn-xs.btn-icon:hover {
   line-height: 15px;
 }
 
-.navbar-brand {
-  max-height: 25px;
+.navbar-expand-lg.navbar {
+  padding: 0;
+}
+
+.navbar-expand-lg .navbar-brand {
+  height: 50px;
+  width: 125px;
+  max-height: 50px;
 }
 
 footer {
@@ -91,36 +97,16 @@ footer {
   margin-left: auto;
 }
 
-@media only screen and (min-width: 768px) {
-  .navbar-expand-md.custom-menu.menu-pills .nav-link {
-    padding: 12px 34px;
-    margin: 0 5px;
-    border-radius: 50px;
-  }
+.text-lobby {
+  height: 200px;
+  background-image: url('/state-lobby.png');
+  background-repeat: no-repeat;
+  padding-left: 130px;
+  max-width: 340px;
+  margin-right: auto;
+  margin-left: auto;
 }
 
-@media only screen and (max-width: 767px) {
-  .navbar-expand-md > .container {
-    padding-right: 15px;
-    padding-left: 15px;
-  }
-
-  .navbar-expand-md .navbar-collapse {
-    position: fixed;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    z-index: 99999;
-    width: 270px;
-    height: 100% !important;
-    max-height: 100% !important;
-    background: #fff;
-    text-align: center;
-    padding: 100px 30px 0;
-    margin-top: 0;
-    box-shadow: 0 3px 12px rgba(0, 0, 0, 0.02), 0 3px 12px rgba(0, 0, 0, 0.04);
-    animation-name: slideInRight;
-    animation-duration: 1s;
-    animation-fill-mode: both;
-  }
+.text-lobby p {
+  font-size: 0.8rem;
 }
