--- a/styles/globals.css
+++ b/styles/globals.css
@@ -88,6 +88,10 @@ body .btn-xs.btn-icon:hover {
 
 footer {
   font-size: 0.55rem;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
 }
 
 .text-lobby {
