--- a/styles/globals.css
+++ b/styles/globals.css
@@ -124,10 +124,26 @@ footer {
   right: 0;
 }
 
+.text-lobby p,
+.text-lobby button {
+  font-size: 1.5rem;
+  line-height: 2rem;
+}
 
 @media only screen and (min-width: 992px) {
   .navbar-expand-lg.custom-menu.menu-pills {
     padding: 0;
+    z-index: 1051;
+  }
+
+  .modal-howto .modal-dialog::after {
+    content: '';
+    position: absolute;
+    top: -1rem;
+    right: 8rem;
+    border-left: 1rem solid transparent;
+    border-right: 1rem solid transparent;
+    border-bottom: 1rem solid #dd2626;
   }
 }
 
