--- a/styles/globals.css
+++ b/styles/globals.css
@@ -143,6 +143,10 @@ footer {
   margin-top: 1rem;
 }
 
+.modal-video .modal-dialog {
+ max-width: 640px; 
+}
+
 @media only screen and (min-width: 768px) {
   .ipad-container {
     width: 680px;
